# PDM2022

./: README.md  pyproject.toml
examples/: drone_in_maze.py  point_robot_with_obstacles.py
pdm2022/env/: maze.py  obstacles.py  wall.py
pdm2022/goal/: dynamic.py  static.py
