[tool.poetry]
name = "pdm2022"
version = "0.1.0"
description = ""
authors = ["your-name <your-address@email.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["robotics", "motion-planning"]

[tool.poetry.dependencies]
python = "^3.6.5, <3.10"
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.19.0"
urdfpy = "^0.0.22"
pynput = {version = "^1.7.6", optional = true}
multiprocess = {version = "^0.70.12", optional = true}
motion-planning-scenes = {version = "^0.3.0", optional = true}
urdfenvs = {version = "^0.3.0", optional = true}

[tool.poetry.extras]
scenes = ["motion-planning-scenes"]
simulator = ["urdfenvs"]
keyboard = ["pynput", "multiprocess"]
all = ["scenes", "simulator", "keyboard"]


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
